# Songbird-Trivia

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-publish.yaml
migrations/: 20210906145552_initial_migration.sql  20230426154600_initial_migration.sql
src/: main.rs  structs.rs
src/commands/: mod.rs  quiz.rs  score.rs  skip.rs
src/database/: game.rs  mod.rs  playlist.rs  song.rs
src/spotify/: mod.rs  spotify_api.rs
src/util/: util.rs
